--- a/resources/config/system_config.properties
+++ b/resources/config/system_config.properties
@@ -1,7 +1,7 @@
 #set file local path 
 #file.local.path=/opt/upload/images
 file.local.path=d://upload
-default.password=12345678
+default.password=123456
 gen.output.path=E:\\xibeiwang\\itms
 goods_type=3#\u5404\u79CD\u89C4\u683C\u6807\u7B7E\u3001\u6807\u7B7E\u4E0D\u5E72\u80F6\u7CFB\u5217;2#\u529E\u516C\u590D\u5370\u7EB8;1#\u9910\u996E\u3001\u6536\u94F6\u7EB8\u70ED\u654F\u6253\u5370\u7EB8\u7CFB\u5217
 notice_type=notice#\u516C\u544A;cooperate#\u5408\u4F5C;trade#\u884C\u4E1A\u52A8\u6001;tips#\u5C0F\u8D34\u58EB;
