--- a/resources/config/system_config.properties
+++ b/resources/config/system_config.properties
@@ -7,3 +7,6 @@ goods_type=3#\u5404\u79CD\u89C4\u683C\u6807\u7B7E\u3001\u6807\u7B7E\u4E0D\u5E72\
 notice_type=notice#\u516C\u544A;cooperate#\u5408\u4F5C;trade#\u884C\u4E1A\u52A8\u6001;tips#\u5C0F\u8D34\u58EB;
 order_status=new#\u65B0\u8BA2\u5355;unpay#\u672A\u652F\u4ED8;pay#\u5DF2\u652F\u4ED8;delivered#\u5DF2\u53D1\u8D27;finished#\u5DF2\u5B8C\u6210
 exchange_status=0#\u5F85\u786E\u8BA4;1#\u5DF2\u786E\u8BA4\u5E76\u53D1\u8D27;2#\u5DF2\u5B8C\u6210
+easysoft.log.client.serverHost=127.0.0.1
+easysoft.log.client.serverPort=9009
+easysoft.log.client.authcode=lELvYV8knC5zNY9afKi7Ag==
